--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         <!-- How to Determine EV Efficiency -->
                         <div class="bg-gradient-to-br from-cyan-50 to-blue-50 border border-cyan-200 rounded-lg p-5">
                             <h4 class="text-lg font-semibold text-cyan-900 mb-3 flex items-center">
-                                <i data-feather="calculator" class="h-5 w-5 mr-2"></i>
+                                <i data-feather="bar-chart" class="h-5 w-5 mr-2"></i>
                                 How to Determine EV Efficiency (km/kWh)
                             </h4>
                             <div class="space-y-3 text-slate-700">
@@ -372,7 +372,7 @@
                     <!-- Efficiency Value -->
                     <div class="input-group">
                         <label class="block text-sm font-semibold text-gray-700 mb-2 flex items-center" id="efficiencyLabel">
-                            <i data-feather="gauge" class="h-4 w-4 mr-1 text-indigo-600"></i>
+                            <i data-feather="activity" class="h-4 w-4 mr-1 text-indigo-600"></i>
                             Efficiency (km/kWh)
                             <div class="relative ml-2">
                                 <i data-feather="help-circle" class="h-4 w-4 text-blue-500 hover:text-blue-600 cursor-help tooltip-trigger" data-tooltip="Real-world efficiency from battery to wheels"></i>
