--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
       <!-- Left Sidebar - Input Form -->
       <div class="lg:w-1/3 xl:w-1/4">
         <div class="bg-white rounded-xl shadow-2xl sticky top-8">
-          <div class="bg-gradient-to-r from-blue-600 to-indigo-600 text-white px-6 py-4 rounded-t-xl">
+          <div class="bg-gradient-to-r from-indigo-500 to-purple-800 text-white px-6 py-4 rounded-t-xl">
             <div class="flex items-center">
               <i data-feather="settings" class="h-6 w-6 mr-2"></i>
               <h2 class="text-xl font-semibold">Vehicle & Charging Parameters</h2>
@@ -408,7 +408,7 @@
                       data-tooltip="Nominal battery capacity as specified by manufacturer"></i>
                   </div>
                 </label>
-                <input type="number" id="batteryCapacity" min="10" max="200" step="1" value="53"
+                <input type="number" id="batteryCapacity" min="1" max="500" step="1" value="53"
                   class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-colors duration-200">
                 <div class="error-message text-red-600 text-sm mt-1 hidden" id="batteryCapacityError"></div>
               </div>
@@ -442,7 +442,7 @@
                       data-tooltip="Real-world efficiency from battery to wheels"></i>
                   </div>
                 </label>
-                <input type="number" id="efficiency" min="1" max="15" step="0.1" value="7.7"
+                <input type="number" id="efficiency" min="1" max="100" step="0.1" value="7.7"
                   class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-colors duration-200">
                 <div class="error-message text-red-600 text-sm mt-1 hidden" id="efficiencyError"></div>
               </div>
@@ -458,7 +458,7 @@
                       data-tooltip="Night time fast charging rates (usually higher due to demand charges)"></i>
                   </div>
                 </label>
-                <input type="number" id="fastDCNight" min="1" max="50" step="0.5" value="25"
+                <input type="number" id="fastDCNight" min="1" max="100" step="0.5" value="25"
                   class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-colors duration-200">
                 <div class="error-message text-red-600 text-sm mt-1 hidden" id="fastDCNightError"></div>
               </div>
@@ -474,7 +474,7 @@
                       data-tooltip="Daytime fast charging rates"></i>
                   </div>
                 </label>
-                <input type="number" id="fastDCDay" min="1" max="50" step="0.5" value="18.5"
+                <input type="number" id="fastDCDay" min="1" max="100" step="0.5" value="18.5"
                   class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-colors duration-200">
                 <div class="error-message text-red-600 text-sm mt-1 hidden" id="fastDCDayError"></div>
               </div>
@@ -554,7 +554,7 @@
                       data-tooltip="Total per-km cost including fuel, maintenance, and depreciation"></i>
                   </div>
                 </label>
-                <input type="number" id="iceRunningCost" min="5" max="30" step="0.5" value="10"
+                <input type="number" id="iceRunningCost" min="1" max="100" step="0.5" value="10"
                   class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-colors duration-200">
                 <div class="error-message text-red-600 text-sm mt-1 hidden" id="iceRunningCostError"></div>
               </div>
@@ -570,7 +570,7 @@
                       data-tooltip="Average distance driven per month for cost comparison"></i>
                   </div>
                 </label>
-                <input type="number" id="monthlyDistance" min="500" max="10000" step="100" value="2000"
+                <input type="number" id="monthlyDistance" min="50" max="25000" step="100" value="2000"
                   class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-colors duration-200">
                 <div class="error-message text-red-600 text-sm mt-1 hidden" id="monthlyDistanceError"></div>
               </div>
